syntax = "proto3";

import "enums.proto";

option go_package = "./pb/emergency-funds";

message CalculateEmergencyFundsRequest {
    string monthly_income = 1;
    string monthly_expense = 2;
    string financial_responsibilities = 3;
    MaritalStatus marital_status = 4;
    uint32 number_of_children = 5;
}

message CalculateEmergencyFundsResponse {
    string recommended_funds = 1;
    MaritalStatus marital_status = 2;
}